--- a/templates/mqttindex.html
+++ b/templates/mqttindex.html
@@ -37,6 +37,37 @@
       $('#subscribe_topic').prop('readonly', false);
     });
 
+    $('#register').click(function(event) {
+        httpRequest = new XMLHttpRequest();
+        httpRequest.onreadystatechange = alertContents;
+        if(!httpRequest) {
+				alert("Can't make XMLHTTP Instance");
+				return false;
+		}
+
+		httpRequest.open('GET', 'get_my_ip');
+		httpRequest.send();		
+    });
+
+    function alertContents() {
+        
+        try{
+
+            if(httpRequest.readyState === XMLHttpRequest.DONE){
+
+                if(httpRequest.status === 200){
+                    result = httpRequest.responseText;
+					console.log(result);
+                }
+            }
+
+        }
+        catch(e){
+            alert(e.description);
+        }
+        
+    }
+
     socket.on('mqtt_message', function(data) {
       console.log(data);
       var text = '(' + data['topic'] + ' qos: ' + data['qos'] + ') ' + data['payload'];
@@ -93,6 +124,7 @@
                 <div class="form-group">
                   <div class="col-xs-8 col-xs-offset-4">
                     <button id="publish" class="btn btn-primary">Publish</button>
+                    <button id="register" class="btn btn-primary">Register</button>
                   </div>
                 </div>
 
