--- a/templates/mqttindex.html
+++ b/templates/mqttindex.html
@@ -37,6 +37,8 @@
       $('#subscribe_topic').prop('readonly', false);
     });
 
+
+    // register a device
     $('#register').click(function(event) {
         httpRequest = new XMLHttpRequest();
         httpRequest.onreadystatechange = alertContents;
