--- a/templates/mqttindex.html
+++ b/templates/mqttindex.html
@@ -70,6 +70,7 @@ $(document).ready(function() {
     $('#publish').click(function(event) {
       var topic = $('#topic').val();
       var message = $('#message').val();
+      console.log(message);
       //var qos = $('#qos').val();
       var data = '{"topic": "' + topic + '", "message": "' + message + '"}';
       console.log(data);
@@ -107,11 +108,22 @@ $(document).ready(function() {
 
 
     socket.on('mqtt_message', function(data) {
-      console.log(data);
-      var text = '(' + data['topic'] + ') ' + data['payload'];
+      var text = data['payload'];
+      //console.log(data['payload'].indexOf("\n"));
+      //var text2=text.split("\n");
+      //console.log(text2.length);
+      //console.log(text2);
+      var text3 = text.substring(1).split("\\n");
+      console.log(text3);
       var $textarea = $('#subscribe_messages');
-      $textarea.val($textarea.val() + text + '\n');
-    })
+
+      $textarea.val($textarea.val() + "--------------------------" + '\n');
+      for(var count = 0; count < text3.length; count++){  
+        $textarea.val($textarea.val() + text3[count] + '\n');
+      }
+      
+      
+    });
 });
 </script>
 {% endblock %}
@@ -146,7 +158,12 @@ $(document).ready(function() {
                 <div class="form-group">
                   <label class="control-label col-xs-4">Message: </label>
                   <div class="col-xs-8">
-                    <input id="message" class="form-control">
+                    <select id="message" class="form-control">
+                      <option value="status">status</option>
+                      <option value="pull">pull</option>
+                      <option value="run">run</option>
+                      <option value="images">images</option>
+                    </select>
                   </div>
                 </div>
 
