--- a/templates/mqttindex.html
+++ b/templates/mqttindex.html
@@ -10,6 +10,8 @@
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
 <script type="text/javascript" charset="utf-8">
 
+
+
 function changeSelect(){
     //var langSelect = document.getElementById("id-lang");
     var deviceList = $('#qos');
@@ -27,6 +29,12 @@ $(document).ready(function() {
     let httpRequest;
     //intervalReq = setInterval(getList,2000);
     getList();
+    //getIP();
+    
+    $.getJSON('http://Gd.geobytes.com/GetCityDetails?callback=?', function(data) {
+    console.log(JSON.stringify(data, null, 2));
+    });
+    
 
     function getList(){
         httpRequest = new XMLHttpRequest();
@@ -56,6 +64,8 @@ $(document).ready(function() {
                         deviceList.append("<option value='"+list[count]["name"]+'_'+list[count]["_id"]+"'>"
                         +list[count]["name"]+'_'+list[count]["_id"]+"</option>");
                     }
+                    var deviceNum = $('#deviceNum');
+                    deviceNum.val(list.length+1);
                 }
 
             }
@@ -99,13 +109,17 @@ $(document).ready(function() {
 
     // register a device
     $('#register').click(function(event) {
-        var id = $('#deviceNum').val();
+        
         var ip = $('#ipAddr').val();
         var name = $('#deviceName').val();
+        getList();
+        var id = $('#deviceNum').val();
         var data = '{"id": "' + id + '", "ipv4Addr": "' + ip + '", "name": "'+ name + '"}';
         console.log(data);
         socket.emit('register', data=data);
         getList();
+        $('#ipAddr').val('');
+        $('#deviceName').val('');
     });
 
 
@@ -128,6 +142,8 @@ $(document).ready(function() {
     });
 });
 </script>
+
+
 {% endblock %}
 
 
@@ -165,6 +181,8 @@ $(document).ready(function() {
                       <option value="pull">pull</option>
                       <option value="run">run</option>
                       <option value="images">images</option>
+                      <option value="stop">stop</option>
+                      <option value="remove">remove container</option>
                     </select>
                   </div>
                 </div>
@@ -250,7 +268,7 @@ $(document).ready(function() {
                   <div class="form-group">
                     <label class="control-label col-xs-4">Device Number: </label>
                     <div class="col-xs-8">
-                      <input id="deviceNum" class="form-control" required>
+                      <input id="deviceNum" class="form-control" required readonly>
                     </div>
                   </div>
 
